# slopguard

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  SHARPEST_SIGNAL_CHECKLIST.md  cyberpunk_panel.html  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/action/: Dockerfile  README.md  action.yml  entrypoint.sh  pr_check.py
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements-ml.txt  requirements.txt  verify_signals.py
apps/api/datasets/samples/: full_dataset.json  github_prs.json  live_raw.json  live_scored.json
apps/api/datasets/training/: counterfactual_absence.jsonl  epistemic_cowardice.jsonl  novel_signals_scoring.json  whywhat_roberta.jsonl
apps/api/slopguard/: __init__.py  build_dataset.py  build_full_dataset.py  build_training_data.py  build_validation_dataset.py  cli.py  evaluate.py  evaluate_hc3.py  load_external_datasets.py  main.py  models.py  scoring.py
apps/api/slopguard/adapters/: __init__.py  baselines.py  citation_verification.py  faiss_clustering.py  finetune_roberta.py  github_oauth.py  live_ingestion.py  networkx_circularity.py  roberta_whywhat.py  semantic_embedding.py  supabase_telemetry.py  ticker.py  treesitter_comments.py
apps/api/slopguard/detectors/: counterfactual.py  counterfactual_absence.py  domains.py  epistemic_cowardice.py  improvement.py  specificity.py  universal.py  vocabulary_novelty.py
apps/api/tests/: test_api.py  test_novel_signals.py  test_scoring.py
apps/extension/: manifest.json  popup.html
apps/web/: Dockerfile  package.json  tsconfig.tsbuildinfo
datasets/: hc3_results.json
datasets/samples/: full_dataset.json  github_prs.json  merged_dataset.json  slopguard_samples.json
docs/: 10_DAY_EXECUTION_PLAN.md  DEMO_SCRIPT.md  DEPLOYMENT.md  FAISS_GPU_DEPLOYMENT.md  JUDGE_PACKET.md  NOVEL_SIGNALS_DEMO.md  PRD.md  PRD_STATUS.md  SHARPEST_SIGNAL_SUBMISSION.md
examples/: cms-prepublish.js  github-action.yml  slack-bot-pseudocode.md
supabase/migrations/: 001_baselines_and_ticker.sql
tests/: live_fire.py
(+16 files in other folders)
